Adaptar triggers a sintaxis PostgreSQL en produccion